--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,36 +3,35 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <form method="post" class="flex flex-col items-center">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+        {% if app.user %}
+            <div class="mb-3">
+                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
 
-    <h1 class="text-center">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-black text-center mt-8">Please sign in</h1>
+        <label for="inputEmail" class="text-left">Email</label>
+        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="input input-bordered w-full max-w-xs" autocomplete="email" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+        <label for="inputPassword" class="text-left">Password</label>
+        <input type="password" name="password" id="inputPassword" class="input input-bordered w-full max-w-xs" autocomplete="current-password" required>
 
-        {#Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+        {# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html#}
 
-        <div class="checkbox mb-3">
+        <div class="mt-3 mb-3">
             <label>
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
 
-    <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-</form>
+        <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none rounded text-lg mt-5">Se connecter</button>
+    </form>
 {% endblock %}
