--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="cupcake">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Bucket List{% endblock %}</title>
-    <link rel="icon" href="">
+    <title>{% block title %}Sortir{% endblock %}</title>
+    <link rel="icon" href="{{ asset('assets/img/sortir-icon.png') }}">
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
@@ -11,13 +11,30 @@
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
-    <link rel="stylesheet" href="">
+    <script src="https://kit.fontawesome.com/6dc61f63db.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container-fluid">
-    <header>
+        <header class="text-gray-600 body-font">
+            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+                <a class="flex title-font font-medium items-center text-gray-900 my-8 md:mb-0">
+                     <i class="fa-solid fa-person-through-window fa-2xl ml-3"></i>
+                    <span class="ml-5 text-xl uppercase">Sortir.com</span>
+                </a>
 
-    </header>
+                <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+                    {% if is_granted("ROLE_ADMIN") %}
+                    <a class="mr-5 hover:text-gray-900">Villes</a>
+                    <a class="mr-5 hover:text-gray-900">Sites</a>
+                    {% endif %}
+                    {% if is_granted("ROLE_USER") %}
+                    <a class="mr-5 hover:text-gray-900">Accueil</a>
+                    <a class="mr-5 hover:text-gray-900">Mon profil</a>
+                    <a class="mr-5 hover:text-gray-900">Se déconnecter</a>
+                    {% endif %}
+                </nav>
+            </div>
+        </header>
 
     <main class="container">
         {% block body %}
