--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,7 +36,7 @@
             </div>
         </header>
 
-    <main class="container">
+    <main class="mx-10">
         {% block body %}
 
         {% endblock %}
