--- a/templates/activity/create.html.twig
+++ b/templates/activity/create.html.twig
@@ -39,7 +39,7 @@
                     {{ form_errors(activityForm.descriptionInfos) }}
                 </div>
             </div>
-            <div class="ml-12">
+            <div class="ml-12 ">
                 <div class="mt-3 flex flex-col">
                     {{ form_label(activityForm.site) }}
                     {{ form_widget(activityForm.site, {'attr': {'class': 'border'}}) }}
@@ -50,10 +50,15 @@
                     {{ form_widget(activityForm.ville, {'attr': {'class': 'border'}}) }}
                     {{ form_errors(activityForm.ville) }}
                 </div>
-                <div class="mt-3 flex flex-col">
-                    {{ form_label(activityForm.lieu) }}
-                    {{ form_widget(activityForm.lieu, {'attr': {'class': 'border'}}) }}
-                    {{ form_errors(activityForm.lieu) }}
+                <div class="flex items-center">
+                    <div class="mt-3 flex flex-col">
+                        {{ form_label(activityForm.lieu) }}
+                        <div class="flex items-center">
+                            {{ form_widget(activityForm.lieu, {'attr': {'class': 'border'}}) }}
+                           <a href="{{ path('app_create_lieu') }}"><img src="{{ asset('assets/img/add-button-lieu.png') }}" alt="ajout d'un lieu" class="w-8 h-8 ml-2"></a>
+                        </div>
+                        {{ form_errors(activityForm.lieu) }}
+                    </div>
                 </div>
                 <div class="mt-3 flex flex-col">
                     {{ form_label(activityForm.rue) }}
