--- a/templates/profile/manageProfile.html.twig
+++ b/templates/profile/manageProfile.html.twig
@@ -3,64 +3,50 @@
 {% block title %}Mon profil{% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-4xl mb-6">Mon profil</h1>
-    <div class="flex  mb-3 profileForm">
-
-        {{ form_start(profileForm) }}
-        <div class="mb-3 flex justify-between">
-            <label for="pseudo">Pseudo :</label>
-            <input id="pseudo" name="pseudo" type="text" value="{{ app.user.pseudo }}">
-        </div>
-
-        <div class="group mb-3 flex justify-between">
-            {{ form_label(profileForm.prenom) }}
-            {{ form_widget(profileForm.prenom) }}
-            {{ form_errors(profileForm.prenom) }}
-        </div>
-        <div class="group mb-3 flex justify-between">
-            {{ form_label(profileForm.nom) }}
-            {{ form_widget(profileForm.nom) }}
-            {{ form_errors(profileForm.nom) }}
-        </div>
-        <div class="group mb-3 flex justify-between">
-            {{ form_label(profileForm.telephone) }}
-            {{ form_widget(profileForm.telephone) }}
-            {{ form_errors(profileForm.telephone) }}
-        </div>
-        <div class="group mb-3 flex justify-between">
-            <label for="email">Email :</label>
-            <input id="email" name="email" type="email" value="{{ app.user.email }}">
-        </div>
-        <div class="group mb-3 flex justify-between">
-            <label for="password">Mot de passe :</label>
-            <input id="password" name="password" type="password">
-        </div>
-        <div class="group mb-3 flex justify-between">
-            <label for="password2">Confirmation :</label>
-            <input id="password2" name="password2" type="password">
-        </div>
-        <div class="group mb-3 flex justify-between">
-{#            <label for="sites">Site de rattachement:</label>#}
-
-{#            <select name="site" id="sites">#}
-{#                <option value="">--Please choose an option--</option>#}
-{#                <option value="dog">Dog</option>#}
-{#                <option value="cat">Cat</option>#}
-{#                <option value="hamster">Hamster</option>#}
-{#                <option value="parrot">Parrot</option>#}
-{#                <option value="spider">Spider</option>#}
-{#                <option value="goldfish">Goldfish</option>#}
-{#            </select>#}
-            {{ form_label(profileForm.site) }}
-            {{ form_widget(profileForm.site) }}
-            {{ form_errors(profileForm.site) }}
-        </div>
-
-        <div class="group mb-3 flex justify-between">
-            <button class="bg-green-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Enregistrer</button>
-            <a href="{{ path('app_home') }}" class="bg-red-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Annuler</a>
-        </div>
-        {{ form_end(profileForm) }}
+    <h1 class="text-center text-4xl mb-6">Profil de {{ participant.compte.pseudo }}</h1>
+    <div class="profileForm grid grid-cols-2 gap-8">
+            {{ form_start(profileForm) }}
+            <div class="mb-3 flex justify-between">
+                <label for="pseudo">Pseudo :</label>
+                <input id="pseudo" name="pseudo" type="text" value="{{ participant.compte.pseudo }}">
+            </div>
+            <div class="group mb-3 flex justify-between">
+                {{ form_label(profileForm.prenom) }}
+                {{ form_widget(profileForm.prenom) }}
+                {{ form_errors(profileForm.prenom) }}
+            </div>
+            <div class="group mb-3 flex justify-between">
+                {{ form_label(profileForm.nom) }}
+                {{ form_widget(profileForm.nom) }}
+                {{ form_errors(profileForm.nom) }}
+            </div>
+            <div class="group mb-3 flex justify-between">
+                {{ form_label(profileForm.telephone) }}
+                {{ form_widget(profileForm.telephone) }}
+                {{ form_errors(profileForm.telephone) }}
+            </div>
+            <div class="group mb-3 flex justify-between">
+                <label for="email">Email :</label>
+                <input id="email" name="email" type="email" value="{{ participant.compte.email }}">
+            </div>
+            <div class="group mb-3 flex justify-between">
+                <label for="password">Mot de passe :</label>
+                <input id="password" name="password" type="password">
+            </div>
+            <div class="group mb-3 flex justify-between">
+                <label for="password2">Confirmation :</label>
+                <input id="password2" name="password2" type="password">
+            </div>
+            <div class="group mb-3 flex justify-between">
+                {{ form_label(profileForm.site) }}
+                {{ form_widget(profileForm.site) }}
+                {{ form_errors(profileForm.site) }}
+            </div>
+            <div class="group mb-3 flex justify-between">
+                <button class="bg-green-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Enregistrer</button>
+                <a href="{{ path('app_home') }}" class="bg-red-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Annuler</a>
+            </div>
+            {{ form_end(profileForm) }}
     </div>
 
 {% endblock %}
