--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
 
                     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                         {% if is_granted("ROLE_ADMIN") %}
+                        <a class="mr-5 hover:text-gray-900">Gestion utilisateurs</a>
                         <a class="mr-5 hover:text-gray-900">Villes</a>
                         <a class="mr-5 hover:text-gray-900">Sites</a>
                         {% endif %}
