--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -146,14 +146,14 @@
             <td>
 {#                <a href="{{ path('app_', { 'id': sortie.id }) }}">Afficher</a>#}
                 {% if checkbox and sortie.organisateur != user.id %}
-                    - <a href="{{ path('app_home', {'inscrie': true}) }}">S'inscrire</a>
+                    - <a href="{{ path('app_home', {'inscrie': sortie.id}) }}">S'inscrire</a>
                 {% elseif checkbox == false %}
-                    - <a href="{{ path('app_home', {'desister': true}) }}">Se désister</a>
+                    - <a href="{{ path('app_home', {'desister': sortie.id}) }}">Se désister</a>
                 {% elseif sortie.organisateur == user.id %}
                     {% if sortie.etat.id == 1 %}
 {#                        - <a href="{{ path('app_', { 'id': sortie.id }) }}">Publier</a>#}
                     {% else %}
-{#                        - <a href="{{ path('app_remove', { 'id': sortie.id }) }}">Annuler</a>#}
+                        - <a href="{{ path('app_remove', { 'id': sortie.id }) }}">Annuler</a>
                     {% endif %}
                 {% endif %}
             </td>
