--- a/templates/profile/detailsProfile.html.twig
+++ b/templates/profile/detailsProfile.html.twig
@@ -43,7 +43,9 @@
                     </div>
                     <div class="flex justify-center items-center w-1/2">
                         <a href="{{ path('app_home') }}" class="bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 border border-blue-700 rounded mt-10 ml-52">Retour</a>
+                        {% if app.user.id == participant.id or is_granted("ROLE_ADMIN") %}
                         <a href="{{ path('manage_profile', {'id':participant.id}) }}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded mt-10 ml-52">Modifier</a>
+                        {% endif %}
                     </div>
                 </section>
                 <!-- ... -->
