--- a/templates/activity/create.html.twig
+++ b/templates/activity/create.html.twig
@@ -85,7 +85,7 @@
     </div>
     <div class="flex justify-center mt-8">
         <button name="save" type="submit" class="btn btn-success">Enregistrer</button>
-        <button name="publish" type="submit" class="btn btn-success">Publier la sortie</button>
+        <button name="publish" type="submit" class="btn btn-success mx-3">Publier la sortie</button>
         <a href="{{ path('app_home') }}" class="btn btn-error">Annuler</a>
     </div>
     {{ form_end(activityForm) }}
