--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,8 +15,8 @@
         {% endif %}
 
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-black text-center mt-8">Please sign in</h1>
-        <label for="inputEmail" class="text-left">Email</label>
-        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="input input-bordered w-full max-w-xs" autocomplete="email" required>
+        <label for="inputPseudoOrEmail" class="text-left">Pseudo ou Email</label>
+        <input type="text" value="{{ last_username }}" name="pseudoOrEmail" id="inputPseudoOrEmail" class="input input-bordered w-full max-w-xs" autocomplete="email" required>
 
         <label for="inputPassword" class="text-left">Password</label>
         <input type="password" name="password" id="inputPassword" class="input input-bordered w-full max-w-xs" autocomplete="current-password" required>
