register Participant creation

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -34,3 +34,12 @@
     margin: auto;
     color: white;
 }
+
+.alert-error{
+    background-color: #B04150;
+    color: #FFFFFF;
+    margin: 5vh auto;
+    padding: 5px;
+    width: 30vw;
+    border-radius: 10px
+}
