--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container-fluid">
-            <header class="text-gray-600 body-font">
+            <header class="text-gray-600 body-font mb-3">
                 <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                     <a class="flex title-font font-medium items-center text-gray-900 my-8 md:mb-0">
                          <i class="fa-solid fa-person-through-window fa-2xl ml-3"></i>
@@ -24,7 +24,7 @@
 
                     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                         {% if is_granted("ROLE_ADMIN") %}
-                        <a class="mr-5 hover:text-gray-900">Gestion utilisateurs</a>
+                        <a href="{{ path('app_register') }}" class="mr-5 hover:text-gray-900">Gestion utilisateurs</a>
                         <a class="mr-5 hover:text-gray-900">Villes</a>
                         <a class="mr-5 hover:text-gray-900">Sites</a>
                         {% endif %}
