--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,8 +38,11 @@
             </header>
             {%  for label, messages in app.flashes%}
                 {% for message in messages %}
-                    <div class="alert-{{ label }} text-center ">
-                        <p>{{ message }}</p>
+                    <div class="alert alert-{{ label }} w-2/5 mx-auto flex justify-center items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                        <span>{{ message }}</span>
                     </div>
                 {% endfor %}
             {% endfor %}
