--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -129,7 +129,7 @@
                 {% set checkbox = true %}
                 {% for inscription in inscriptions %}
                     {% if sortie.id == inscription %}
-                        <input type="checkbox" checked="checked" class="checkbox checkbox-xs" disabled />
+                        <input type="checkbox" checked="checked" class="checkbox checkbox-xs checkbox-success" disabled />
                         {% set checkbox = false %}
                     {% endif %}
                 {% endfor %}
@@ -153,7 +153,7 @@
                     - <a href="{{ path('app_home', {'desister': sortie.id}) }}">Se désister</a>
                 {% elseif sortie.organisateur == user.id %}
                     {% if sortie.etat.id == 1 %}
-{#                        - <a href="{{ path('app_', { 'id': sortie.id }) }}">Publier</a>#}
+                        - <a href="{{ path('app_', { 'id': sortie.id }) }}">Publier</a>
                     {% elseif sortie.dateCloture > dateNow %}
                         - <a href="{{ path('app_remove', { 'id': sortie.id }) }}">Annuler</a>
                     {% endif %}
