--- a/templates/activity/create.html.twig
+++ b/templates/activity/create.html.twig
@@ -7,7 +7,7 @@
     <div class="flex justify-center mt-8">
         <div class="grid grid-cols-2 gap-8">
             <div>
-                {{ form_start(activityForm) }}
+                {{ form_start(activityForm, {'attr' : {'id' : 'activity_form'}}) }}
                 <div class="mt-3 flex flex-col">
                     {{ form_label(activityForm.nom) }}
                     {{ form_widget(activityForm.nom, {'attr': {'class': 'border'}}) }}
@@ -39,7 +39,7 @@
                     {{ form_errors(activityForm.descriptionInfos) }}
                 </div>
             </div>
-            <div class="ml-12 ">
+            <div class="ml-12">
                 <div class="mt-3 flex flex-col">
                     {{ form_label(activityForm.site) }}
                     {{ form_widget(activityForm.site, {'attr': {'class': 'border'}}) }}
@@ -55,7 +55,7 @@
                         {{ form_label(activityForm.lieu) }}
                         <div class="flex items-center">
                             {{ form_widget(activityForm.lieu, {'attr': {'class': 'border'}}) }}
-                           <a href="{{ path('app_create_lieu') }}"><img src="{{ asset('assets/img/add-button-lieu.png') }}" alt="ajout d'un lieu" class="w-8 h-8 ml-2"></a>
+                            <a href="{{ path('app_create_lieu') }}"><img src="{{ asset('assets/img/add-button-lieu.png') }}" alt="ajout d'un lieu" class="w-8 h-8 ml-2"></a>
                         </div>
                         {{ form_errors(activityForm.lieu) }}
                     </div>
@@ -81,12 +81,47 @@
                     {{ form_errors(activityForm.longitude) }}
                 </div>
             </div>
-        </div>
+            </div>
     </div>
-    <div class="flex justify-center mt-8">
-        <button name="save" type="submit" class="btn btn-success">Enregistrer</button>
-        <button name="publish" type="submit" class="btn btn-success mx-3">Publier la sortie</button>
-        <a href="{{ path('app_home') }}" class="btn btn-error">Annuler</a>
+    <div class="mt-6 flex justify-center">
+        <button type="submit" name="save" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+            Enregistrer
+        </button>
+        <button type="submit" name="publish" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-4">
+            Publier
+        </button>
+        <a href="{{ path('app_home') }}" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-4">
+            Annuler
+        </a>
     </div>
     {{ form_end(activityForm) }}
+{% endblock %}
+{% block javascripts %}
+    <script>
+        window.onload = () => {
+            let ville = document.querySelector("#create_activity_ville");
+            ville.addEventListener("change", function (){
+                let form = document.querySelector("#activity_form");
+                let data = this.name + "=" + this.value;
+
+                fetch(form.action,{
+                    method : form.getAttribute("method"),
+                    body : data,
+                    headers : {
+                        "Content-Type" : "application/x-www-form-urlencoded;charset:UTF-8"}
+                })
+                    .then(response => response.text())
+                    .then(html => {
+                        let content  = document.createElement("html");
+                        content.innerHTML = html;
+                        let newSelect = content.querySelector("#create_activity_lieu");
+                        document.querySelector("#create_activity_lieu").replaceWith(newSelect);
+                        console.log(newSelect)
+                    })
+                    .catch(error => {
+                        console.log(error)
+                    })
+            });
+        }
+    </script>
 {% endblock %}
