--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,7 @@
                         {% endif %}
                         {% if is_granted("ROLE_USER") %}
                         <a href="{{ path('app_home') }}" class="mr-5 hover:text-gray-900">Accueil</a>
+                        <a href="{{ path('app_create_city')}}" class="mr-5 hover:text-gray-900">Ajouter une ville</a>
                         <a href="{{ path('details_profile', {'id':app.user.id}) }}" class="mr-5 hover:text-gray-900">Mon profil</a>
                         <a href="{{ path('app_logout') }}" class="mr-5 hover:text-gray-900">Se déconnecter</a>
                         {% endif %}
