--- a/templates/lieu/create.html.twig
+++ b/templates/lieu/create.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Création d'un lieu{% endblock %}
 {% block body %}
-    <h1 class="text-4xl mb-8 text-center">Création d'un lieu</h1>
+    <h1 class="text-4xl mb-8 text-center">Ajout d'un lieu</h1>
     {{ form_start(lieuForm) }}
     <div class="w-1/5 mx-auto">
         <div class="flex justify-between mt-3">
