--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -157,6 +157,9 @@
                     {#{% elseif sortie.dateCloture > dateNow %}
                         #}{#- <a href="{{ path('app_remove', { 'id': sortie.id }) }}">Annuler</a>#}
                     {% endif %}
+                    {% if sortie.etat.id == 1 or sortie.etat.id == 2 %}
+                        - <a href="{{ path('app_update',{'id' : sortie.id}) }}">Modifier</a>
+                    {% endif %}
                 {% endif %}
                 {% if is_granted("ROLE_ADMIN") %}
                     - <a href="{{ path('app_remove', { 'id': sortie.id }) }}">Annuler</a>
