reset password + mail

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,5 +33,9 @@
         </div>
 
         <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none rounded text-lg mt-5">Se connecter</button>
+
+        <br>
+        <a href="{{ path('app_forgot_password_request') }}" class="link link-primary">Mot de passe oublié ? 🤔</a>
+
     </form>
 {% endblock %}
