--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -33,3 +33,11 @@
     --tw-bg-opacity: 1;
     background-color: hsl(var(--su) / var(--tw-bg-opacity));
 }
+
+.alert-danger {
+    --tw-border-opacity: 1;
+    border-color: red; /* Rouge */
+    --tw-bg-opacity: 1;
+    background-color: red; /* Rouge */
+}
+
