--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
-    <script src="https://kit.fontawesome.com/6dc61f63db.js" crossorigin="anonymous"></script>
+{#    <script src="https://kit.fontawesome.com/6dc61f63db.js" crossorigin="anonymous"></script>#}
 </head>
 <body>
     <div class="container-fluid">
