--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -3,12 +3,13 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
-    <h1>Reset your password</h1>
+    <form method="post" class="flex flex-col items-center">
+        {% for flash_error in app.flashes('reset_password_error') %}
+            <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+        {% endfor %}
+        <h1>Reset your password</h1>
 
-    {{ form_start(requestForm) }}
+        {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
         <div>
             <small>
@@ -17,6 +18,11 @@
             </small>
         </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+        <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none rounded text-lg mt-5">Send password reset email</button>
+
+        <br>
+
+        <a href="{{ path('app_login') }}" class="link link-primary">Je me souviens de mon mot de passe 🤦‍♂️</a>
+        {{ form_end(requestForm) }}
+    </form>
 {% endblock %}
